--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title-t4">2023년 신년계획</h1>
     <p class="msg">올해는 꼭 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">나만의 웹서비스 만들기</div>
+        <div class="bucket img1-t2 center done">나만의 웹서비스 만들기</div>
         <div class="bucket img2-t5 center">내 집으로 이사가기</div>
         <div class="bucket img2 center">일본 가기</div>
         <div class="bucket img1-t4 center">아이들 만나기</div>
